fix:goods access bug